Minimizing noise in the tox.ini file.

--- a/tox.ini
+++ b/tox.ini
@@ -24,5 +24,4 @@ setenv =
     BUILDDIR = {toxinidir}{/}docs{/}_build
     docs: BUILD = html
 commands =
-    ; sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}{/}doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}{/}{env:BUILD}" {posargs}
-    python -c 'print("{env:BUILD} -- {env:BUILDDIR}{/}{env:BUILD}")'
+    python -c 'print(r"{env:BUILD} -- {env:BUILDDIR}{/}{env:BUILD}")'
